fix css bleeding, CSS clean-up is next :/

--- a/src/components/DesktopHotelCardV1/DesktopHotelCardV1.scss
+++ b/src/components/DesktopHotelCardV1/DesktopHotelCardV1.scss
@@ -16,7 +16,7 @@ button {
   margin-bottom: .5rem;
 }
 
-.Gallery {
+.DesktopGallery {
   height: 100%;
   width: 200px;
   background: gray;
@@ -36,7 +36,7 @@ button {
   justify-content: space-between;
 }
 
-.CardLink {
+.DesktopCardLink {
   position: absolute;
   top: 0;
   left: 0;
@@ -55,7 +55,7 @@ button {
   }
 }
 
-.CardLink:focus-within, .SaveButton:focus-within {
+.DesktopCardLink:focus-within, .SaveButton:focus-within {
   outline: .125rem solid #0062e3;
   outline-offset: .125rem;
 }
